Added ABC to Factory and Reenforced Singleton for DB connection

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
 /PSE/Week3/W3A5_UpdateSamplecodeSQLite3
 /QC
+PSE/PSE_Assessment1/Code/__pycache__/admin_repo.cpython-313.pyc
+PSE/PSE_Assessment1/Code/__pycache__/analytics_repo.cpython-313.pyc
+PSE/PSE_Assessment1/Code/__pycache__/booking_repo.cpython-313.pyc
+PSE/PSE_Assessment1/Code/__pycache__/car_repo.cpython-313.pyc
+PSE/PSE_Assessment1/Code/__pycache__/customer_repo.cpython-313.pyc
+PSE/PSE_Assessment1/Code/__pycache__/sql_repo.cpython-313.pyc
+PSE/PSE_Assessment1/Code/__pycache__/user_repo.cpython-313.pyc
+/PSE/PSE_Assessment1/backup
+/PSE/PSE_Assessment1/Code/__pycache__
+/PSE/PSE_Assessment1/Code/build/dodscars
+/PSE/PSE_Assessment1/Code/build/dodscars_seeder
