minor bug fix on analytics module

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ PSE/PSE_Assessment1/Code/__pycache__/user_repo.cpython-313.pyc
 /PSE/PSE_Assessment1/Code/tests
 /PSE/PSE_Assessment1/tests_uc
 /PSE/PSE_Assessment1/Code/scripts
+/PSE/PSE_Assessment1/Code/assets
