--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@ PSE/PSE_Assessment1/Code/__pycache__/user_repo.cpython-313.pyc
 /PSE/PSE_Assessment1/Code/__pycache__
 /PSE/PSE_Assessment1/Code/build/dodscars
 /PSE/PSE_Assessment1/Code/build/dodscars_seeder
+/PSE/PSE_Assessment1/Code/.artifacts
+/PSE/PSE_Assessment1/Code/tests
+/PSE/PSE_Assessment1/tests_uc
+/PSE/PSE_Assessment1/Code/tools
+/PSE/PSE_Assessment1/Code/smoke
+/PSE/PSE_Assessment1/Code/scripts
