Docker files for Assessment 1

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ PSE/PSE_Assessment1/Code/__pycache__/user_repo.cpython-313.pyc
 /PSE/PSE_Assessment1/tests_uc
 /PSE/PSE_Assessment1/Code/scripts
 /PSE/PSE_Assessment1/Code/assets
+/PSE/Week11/activity_pytest_demo
+PSE/Week11/Exp3-doctest.py
