--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ PSE/PSE_Assessment1/Code/__pycache__/user_repo.cpython-313.pyc
 /PSE/PSE_Assessment1/Code/assets
 /PSE/Week11/activity_pytest_demo
 PSE/Week11/Exp3-doctest.py
+/PSE/Week12/__pycache__
