--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ PSE/PSE_Assessment1/Code/__pycache__/user_repo.cpython-313.pyc
 /PSE/Week11/activity_pytest_demo
 PSE/Week11/Exp3-doctest.py
 /PSE/Week12/__pycache__
+/PSE/Week12/static
+/PSE/Week12/templates
