--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ PSE/Week11/Exp3-doctest.py
 /PSE/Week12/__pycache__
 /PSE/Week12/static
 /PSE/Week12/templates
+PSE/Week12/django_activity/django_activity/__init__.py
+/PSE/Week12/django_activity/django_activity/__pycache__
